--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,25 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.header {
+  width: 100%;
+  background-color: blue;
+  color: #fff;
+  padding: 1%;
+  text-align: left;
+}
+a {
+  text-decoration: none !important;
+  color: white !important;
+  padding: 2px;
+}
+.bg-dark-text-white {
+  background-color: black;
+  color: white;
+}
+.card-header {
+  text-align: right;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
